--- a/stockwatch/Pages/MainPage.xaml
+++ b/stockwatch/Pages/MainPage.xaml
@@ -2,17 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:strings="clr-namespace:stockwatch.Resources.Strings"
              xmlns:local="clr-namespace:stockwatch.Pages"
              x:Class="stockwatch.Pages.MainPage"
              x:Name="mainPage"
-             Title="My symbol">
+             Title="{Binding Source={x:Static strings:AppResources.LBL_MySymbol}}">
     <ContentPage.Resources>
         <ResourceDictionary>
             <x:Decimal x:Key="Threshold">0</x:Decimal>
             <toolkit:BoolToObjectConverter 
                 x:Key="WatchButtonTextConverter" 
-                TrueObject="Watch"
-                FalseObject="Stop watching"/>
+                TrueObject="{x:Static strings:AppResources.LBL_Watch}"
+                FalseObject="{x:Static strings:AppResources.LBL_StopWatch}"/>
             <toolkit:BoolToObjectConverter 
                 x:Key="WatchButtonColorConverter" 
                 TrueObject="#512bd4"
@@ -35,13 +36,13 @@
                     Grid.Row="0"
                     Grid.Column="0"
                     VerticalTextAlignment="Center"
-                    Text="Symbol: "/>
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_SymbolID}}"/>
                 <Entry
                     x:Name="entSymbol"
                     Grid.Row="0"
                     Grid.Column="1"
                     Grid.ColumnSpan="2"
-                    Placeholder="Input symbol"
+                    Placeholder="{Binding Source={x:Static strings:AppResources.LBL_ExampleOfSymbolID}}"
                     TextTransform="Uppercase"
                     IsEnabled="{Binding IsWatcherStopped, Source={x:Reference mainPage}}"/>
 
@@ -49,56 +50,60 @@
                     Grid.Row="1"
                     Grid.Column="0"
                     VerticalTextAlignment="Center"
-                    Text="Reference price: "/>
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_ReferencePrice}}"/>
                 <Entry
                     x:Name="entReferencePrice"
                     Grid.Row="1"
                     Grid.Column="1"
-                    Placeholder="Input reference price"
                     Keyboard="Numeric"
+                    WidthRequest="100"
                     Text="0"
                     IsEnabled="{Binding IsWatcherStopped, Source={x:Reference mainPage}}"/>
                 <Label 
                     Grid.Row="1"
                     Grid.Column="2"
                     VerticalTextAlignment="Center"
-                    Text="VND"/>
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_VND}}"/>
 
                 <Label 
                     Grid.Row="2"
                     Grid.Column="0"
                     VerticalTextAlignment="Center"
-                    Text="Expected percentage: "/>
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_ExpectedPercentage}}"/>
                 <Entry
                     x:Name="entCeilingPrice"
                     Grid.Row="2"
                     Grid.Column="1"
                     Keyboard="Numeric"
                     Text="5"
+                    WidthRequest="100"
                     IsEnabled="{Binding IsWatcherStopped, Source={x:Reference mainPage}}"/>
                 <Label 
                     Grid.Row="2"
                     Grid.Column="2"
                     VerticalTextAlignment="Center"
-                    Text="% (higher)"/>
+                    TextTransform="Lowercase"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_Higher}, StringFormat='% ({0})'}"/>
 
                 <Label 
                     Grid.Row="3"
                     Grid.Column="0"
                     VerticalTextAlignment="Center"
-                    Text="Unexpected percentage: "/>
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_UnexpectedPercentage}}"/>
                 <Entry
                     x:Name="entFloorPrice"
                     Grid.Row="3"
                     Grid.Column="1"
                     Keyboard="Numeric"
                     Text="5"
+                    WidthRequest="100"
                     IsEnabled="{Binding IsWatcherStopped, Source={x:Reference mainPage}}"/>
                 <Label 
                     Grid.Row="3"
                     Grid.Column="2"
                     VerticalTextAlignment="Center"
-                    Text="% (lower)"/>
+                    TextTransform="Lowercase"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_Lower}, StringFormat='% ({0})'}"/>
             </Grid>
 
             <Button
@@ -111,7 +116,8 @@
 
             <HorizontalStackLayout>
                 <Label 
-                    Text="Symbol: "/>
+                    Padding="0,0,5,0"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_SymbolID}, StringFormat='{0}:'}"/>
                 <Label                    
                     FontAttributes="Bold"
                     Text="{Binding LatestPrice.SymbolId, Source={x:Reference mainPage}}"/>
@@ -119,7 +125,8 @@
 
             <HorizontalStackLayout>
                 <Label 
-                    Text="Price: "/>
+                    Padding="0,0,5,0"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_Price}, StringFormat='{0}:'}"/>
                 <Label
                     FontAttributes="Bold"
                     Text="{Binding LatestPrice.Price, Source={x:Reference mainPage}, StringFormat='{0:N0} VND', TargetNullValue='N/A'}"
@@ -128,7 +135,8 @@
 
             <HorizontalStackLayout>
                 <Label 
-                    Text="Percentage: "/>
+                    Padding="0,0,5,0"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_Percentage}, StringFormat='{0}:'}"/>
                 <Label
                     FontAttributes="Bold"
                     Text="{Binding LatestPrice.Percentage, Source={x:Reference mainPage}, StringFormat='{0:F2}%', TargetNullValue='N/A'}"
@@ -137,7 +145,8 @@
 
             <HorizontalStackLayout>
                 <Label 
-                    Text="Latest data at: "/>
+                    Padding="0,0,5,0"
+                    Text="{Binding Source={x:Static strings:AppResources.LBL_LatestDataAtTime}, StringFormat='{0}:'}"/>
                 <Label
                     Text="{Binding LatestPrice.AtTime, Source={x:Reference mainPage}, StringFormat='{0:yyyy-MM-dd HH:mm:ss}', TargetNullValue='N/A'}"/>
             </HorizontalStackLayout>
