--- a/stockwatch/Pages/MainPage.xaml
+++ b/stockwatch/Pages/MainPage.xaml
@@ -47,7 +47,7 @@
                     x:Name="entReferencePrice"
                     Grid.Row="1"
                     Keyboard="Numeric"
-                    DecimalPlace="0"
+                    DecimalPlace="{Binding CurrencyDecimalPlace, Source={x:Reference mainPage}}"
                     LabelWidth="155"
                     TextWidth="150"
                     IsEnabled="{Binding IsWatcherStopped, Source={x:Reference mainPage}}"
