--- a/stockwatch/Platforms/Android/Resources/Layout/floatview.xml
+++ b/stockwatch/Platforms/Android/Resources/Layout/floatview.xml
@@ -17,8 +17,9 @@
     android:textAlignment="center"
     android:gravity="center"
     android:layout_marginTop="13sp"
-    android:maxLines="1"    
-    android:textSize="18sp"/>
+    android:layout_marginRight="3sp"
+    android:maxLines="1"
+    android:autoSizeTextType="uniform"/>
 
 <TextView    
     android:id="@+id/tv2"
@@ -30,6 +31,6 @@
     android:gravity="center"
     android:layout_marginBottom="10sp"
     android:maxLines="1"    
-    android:textSize="11sp"/>
+    android:textSize="11dp"/>
 
 </LinearLayout>
