--- a/stockwatch/Platforms/Android/Resources/Layout/floatview.xml
+++ b/stockwatch/Platforms/Android/Resources/Layout/floatview.xml
@@ -18,6 +18,7 @@
     android:gravity="center"
     android:layout_marginTop="13sp"
     android:layout_marginRight="3sp"
+    android:layout_marginLeft="3sp"
     android:maxLines="1"
     android:autoSizeTextType="uniform"/>
 
